2008-08-13  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.*: Fixed compilation due to errors with new
	isQuickRenderEnabled and setQuickRenderEnabled (is Enabled needed).

2008-08-14  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.*: Removed the isStable / setStable functions
	from the GLWidget.  They are not being used and I acnnot tell why they
	are even in there.

2008-08-13  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/mainwindow.cpp: Fix the settingsWindow to be a parent of
	MainWindow (so that it gets properly deleted when the program exits)
	and make it so that only one settings window per engine can be active.

2008-08-13  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Revert the settingsWindow from being
	instantiated as a child of MainWindow - caused issues here.

2008-08-12  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/*: Fixed the plugin manager so that it works properly
	with multiple main windows.

	* avogadro/src/settingswidget.*: Added a setting for smooth transitions.

	* avogadro/src/mainwindow.cpp: Added a movement function so that when 
	you center the view it is animated.  This will make zooming look cooler.
	Eye candy.

2008-08-08  Naomi Fox  <naomi.fox@gmail.com>
	
	* libavogadro/src/extensions/trajvideomaker.* : static functions for 
	making a .avi of a trajectory.

	* libavogadro/src/extensions/linmorph.* : fixed a bug with the total
	number of frames not matching the number of conformations. also now
	tell user where the video file they created is stored.

2008-08-06  Naomi Fox  <naomi.fox@gmail.com>

	* libavogadro/src/extensions/linmorph* : LinMorph extension 
	from animation branch.

	* testfiles/tyr-33-conf* : Test conformations for LinMorph extension

2008-07-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/addenginedialog.*: Use new PluginFactory class.
	