@@ -1,3 +1,10 @@
+2008-09-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
+	* libavogadro/src/engines/surfaceengine.cpp: Don't try to compute and
+	render a surface when there are no atoms. This was also causing a
+	crash when starting avogadro with the surface engine enabled on one of
+	my computers here.
+
 2008-08-13  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/glwidget.*: Fixed compilation due to errors with new
